# robodashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  app_config.py  bootstrap.py  config.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt  snaptrade_reader.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml
advisor/: __init__.py  analysis.py  llm.py  profile.py
analytics/: __init__.py  ledger.py
data/: market_hours.py  metrics.py  price_cache.py  snapshots.py
infrastructure/: DEPLOY.md  deploy-on-merge.sh  load_secrets.sh  nginx-portfolio.conf  robodashboard-snapshot.service  robodashboard-snapshot.timer  robodashboard.service
loaders/: alpha_engine.py  domicile.py  portfolio_loader.py
pages/: 1_History.py  2_Alpha_Engine.py
scripts/: daily_snapshot.py
tests/: test_advisor_analysis.py  test_advisor_llm.py  test_advisor_profile.py  test_alpha_engine.py  test_analytics_ledger.py  test_analytics_returns.py  test_analytics_riskstats.py  test_app_config.py  test_charts.py  test_columns.py  test_domicile.py  test_fx.py  test_history.py  test_market_hours.py  test_metrics.py  test_portfolio_loader.py  test_smoke.py  test_snapshots.py  test_summary.py
tools/: link_account.py
ui/: charts.py  columns.py  history.py  summary.py
views/: __init__.py  ai_advisor.py  alpha_engine.py  history.py  overview.py  preferences.py
